tools/tree-sitter-bsl/grammar.js
    source_file: ($) => repeat($._top_form),

    _top_form: ($) =>
      choice(
        $.rule,
        $.deffield,
        $.intrinsic_decl,
        $.manifest,
        $.metric_decl,
        $.defenum,
        $.defvocabulary,
        $.generic_form,
      ),

    /* --- §2.3 rules --------------------------------------------------- */

    rule: ($) =>
      seq(
        '(',
        'rule',
        field('id', $.qname),
        repeat(
          choice($.rule_role, $.evidence, $.material_basis, $.fuel, $.projects_kernel),
        ),
        choice(
          seq($.anchor, choice($.material_cycle, $.organizer_products, $.organizer_practice)),
          seq(
            optional($.domain),
            optional($.anchor),
            $.bindings,
            optional($.when),
            $.effects,
          ),
        ),
        ')',
      ),

    /* §2.3: the four valued keyword options may appear in any source order,
     * so they are collected rather than sequenced. Presence and closed-set
     * membership are load checks, not tree-sitter recovery policy. */
    rule_role: (_$) =>
      seq(':role', choice('mechanic', 'recognizer', 'external-event', 'intent')),
    evidence: (_$) =>
      seq(':evidence', choice('observed', 'derived', 'calibrated', 'designed')),
    material_basis: ($) => seq(':material-basis', $.string),
    fuel: ($) => seq(':fuel', $.int_lit),
    projects_kernel: ($) => seq(':projects-kernel', $.qname),

    domain: ($) => seq('(', 'domain', choice($.enum_ref, $.graph_flag), ')'),
    graph_flag: (_$) => ':graph',

    anchor: ($) => seq('(', 'anchor', choice(':after', ':before'), $.symbol, ')'),

    bindings: ($) => seq('(', 'bindings', repeat($.binding), ')'),
    when: ($) => seq('(', 'when', $._cond, ')'),
    effects: ($) => seq('(', 'effects', repeat1($._effect_item), ')'),

    /* --- §2.4 conditions ---------------------------------------------- */

    _cond: ($) =>
      choice(
        $.bool_lit,
        $.and_cond,
        $.or_cond,
        $.not_cond,
        $.comparison,
        $.exists,
        $.forall,
      ),

    comparison: ($) => seq('(', $.cmp, $._expr, $._expr, ')'),
    cmp: (_$) => choice(...CMP),

    exists: ($) =>
      seq('(', 'exists', $._query, optional($.elem_name), optional($._cond), ')'),
    binding: ($) => seq('(', 'binding', $.symbol, $.bind_src, repeat($.bind_opt), ')'),

    bind_src: ($) =>
      choice(
        seq(':field', $.qname),
        seq(':const', $.qname),
        seq(':metric', $.symbol),
        ':tick',
        ':year',
        ':tick-of-year',
        seq(':tick-in-cycle', $.int_lit),
        seq(':expr', $._expr),
      ),

    _query: ($) =>
      choice($.nodes, $.edges, $.neighbors, $.hyperedges, $.members_of, $.hyperedges_of),

    nodes: ($) => seq('(', 'nodes', $.enum_ref, optional($._cond), ')'),
    edges: ($) => seq('(', 'edges', $.enum_ref, optional($._cond), ')'),
    neighbors: ($) =>
      seq('(', 'neighbors', $._expr, $.enum_ref, $.direction, $.enum_ref, ')'),

    members_of: ($) => seq('(', 'members-of', $._expr, $.enum_ref, ')'),
    hyperedges_of: ($) => seq('(', 'hyperedges-of', $._expr, $.enum_ref, ')'),

    direction: (_$) => choice(':out', ':in', ':any'),
    elem_name: ($) => seq(':as', $.symbol),

    /* --- §2.7 expressions ---------------------------------------------- */

    _expr: ($) =>
      choice(
        $.literal,
        $.symbol,
        $.enum_ref,
        $.arith_expr,
        $.if_expr,
        $.quantize_mass,
        $.fold,
        $._accessor,
        $.selection,
        $.intrinsic_call,
      ),

    arith_expr: ($) => seq('(', $.arith, $._expr, $._expr, ')'),
    arith: (_$) => choice(...ARITH),

    if_expr: ($) => seq('(', 'if', $._cond, $._expr, $._expr, ')'),

    quantize_mass: ($) => seq('(', 'quantize-mass', $._expr, ')'),

    fold: ($) =>
      seq(
        '(',
        'fold',
        $.fold_op,
        $._query,
        optional($.elem_name),
        $._expr,
        optional($.weight),
        ')',
      ),
    fold_op: (_$) => choice(...FOLD_OPS),
    weight: ($) => seq(':weight', $._expr),

    selection: ($) =>
      seq(
        '(',
        choice('select-max', 'select-min'),
        $._query,
        optional($.elem_name),
        $._expr,
        ')',
      ),

    /* §2.7: an intrinsic call is an ordinary form whose head is a symbol
     * declared in the intrinsic table. D33 reserves every §5.2 form tag
     * against that namespace, which is exactly why the head here is a plain
     * symbol and never a reserved word. */
    field_of: ($) => seq('(', 'field-of', $._expr, $.qname, ')'),
    edge_between: ($) => seq('(', 'edge-between', $.enum_ref, $._expr, $._expr, ')'),
    the: ($) => seq('(', 'the', $.enum_ref, ')'),
    membership_field_of: ($) =>
      seq('(', 'membership-field-of', $._expr, $._expr, $.qname, ')'),

    /* --- §2.8 effects --------------------------------------------------- */

    _effect_item: ($) => choice($._verb, $.guard, $.for_each, $.choose),

    for_each: ($) =>
      seq('(', 'for-each', $._query, optional($.elem_name), repeat1($._effect_item), ')'),

    choose: ($) =>
      seq(
        '(',
        'choose',
        ':sample',
        $.qname,
        ':slot',
        $.u32_lit,
        repeat1($.branch),
        ')',
      ),

    branch: ($) =>
      seq('(', 'branch', $.enum_ref, ':mass', $._expr, $.branch_effects, ')'),

    /* A branch may make no material change. The reference loader enforces
     * the AJ context restriction that every nested item is deterministic:
     * no `emit` and no nested `choose`. */
    branch_effects: ($) => seq('(', 'effects', repeat($._effect_item), ')'),

    update_node: ($) => seq('(', 'update-node', $._expr, $.qname, $.update_op, ')'),
    update_edge: ($) => seq('(', 'update-edge', $._expr, $.qname, $.update_op, ')'),
    update_hyperedge: ($) =>
      seq('(', 'update-hyperedge', $._expr, $.qname, $.update_op, ')'),
    update_membership: ($) =>
      seq('(', 'update-membership', $._expr, $._expr, $.qname, $.update_op, ')'),

    add_node: ($) => seq('(', 'add-node', $.enum_ref, $._expr, repeat($.field_init), ')'),
    remove_node: ($) => seq('(', 'remove-node', $._expr, ')'),

    add_edge: ($) =>
      seq(
        '(',
        'add-edge',
        $.enum_ref,
        $._expr,
        $._expr,
        $.strength,
        repeat($.field_init),
        ')',
      ),
    strength: ($) => seq(':strength', $._expr),
    remove_edge: ($) => seq('(', 'remove-edge', $.enum_ref, $._expr, $._expr, ')'),

    add_hyperedge: ($) =>
      seq('(', 'add-hyperedge', $.enum_ref, $._expr, $.members, repeat($.field_init), ')'),
    remove_hyperedge: ($) => seq('(', 'remove-hyperedge', $._expr, ')'),

    emit: ($) => seq('(', 'emit', $.enum_ref, repeat($.payload_item), ')'),

    update_op: ($) => seq('(', choice('add', 'sub', 'set', 'scale'), $._expr, ')'),

    members: ($) => seq('(', 'members', repeat1($._member_item), ')'),
    _member_item: ($) => choice($._expr, $.member),
    member: ($) => seq('(', 'member', $.enum_ref, $._expr, repeat($.field_init), ')'),

    field_init: ($) => seq('(', $.qname, $._expr, ')'),
    payload_item: ($) => seq('(', $.symbol, $._expr, ')'),

    /* --- §2.9 / §2.11 declarations --------------------------------------- */

    deffield: ($) =>
      seq(
        '(',
        'deffield',
        $.qname,
        ':type',
        $.type_name,
        ':kind',
        $.field_kind,
        optional(seq(':member', $.enum_ref)),
        ')',
      ),
    field_kind: (_$) => choice('intensive', 'extensive'),
    type_name: ($) => $.symbol,

    intrinsic_decl: ($) =>
      seq(
        '(',
        'intrinsic',
        $.symbol,
        ':params',
        seq('(', repeat($.type_name), ')'),
        ':returns',
        $.type_name,
        ':cost',
        $.int_lit,
        ')',
      ),

    metric_decl: ($) =>
      seq(
        '(',
        'metric',
        $.symbol,
        ':type',
        $.type_name,
        ':kind',
        $.field_kind,
        $.domain,
        ':provider',
        $.symbol,
        ')',
      ),

    /* §2.13 (Organization spec §1 Q12, D101). */
    generic_form: ($) =>
      seq(
        '(',
        choice(alias($._plain_symbol, $.symbol), $.qname),
        repeat($._generic_item),
        ')',
      ),

    _generic_item: ($) =>
      choice(
        $.literal,
        $.string,
        $.symbol,
        $.qname,
        $.enum_ref,
        $.keyword,
        $.rule,
        $.generic_form,
      ),

    /* --- §1.4 / §1.5 atoms ------------------------------------------------ */

    literal: ($) => choice($.int_lit, $.scaled_lit, $.mass_lit, $.bool_lit),

    /* A symbol in VALUE position may be spelled like a §5.2 form tag: D33
     * reserves those names against the intrinsic namespace only. */
    symbol: ($) => choice($._plain_symbol, ...RESERVED_WORDS),
    _plain_symbol: (_$) => /[a-z][a-z0-9-]*/,

    qname: (_$) => token(/[a-z][a-z0-9-]*(\/[a-z][a-z0-9-]*)+/),

    enum_ref: (_$) => token(/[A-Z][A-Za-z0-9]*\/[A-Z][A-Z0-9_]*/),

    /* §2.13 (Organization spec §1 Q12, D101): `defenum`'s type name and
     * `defvocabulary`'s <enum-kind> operand are bare — no `/MEMBER` — so
     * they need their own tokens rather than reusing `enum_ref`, whose
     * regex is the whole `Type/MEMBER` pair as ONE atomic token. These
     * two mirror `enum_ref`'s two halves exactly (bsl.ebnf's `enum-type`
     * and `enum-member` productions, §1.4), split apart because §2.13 is
     * the first construct that needs either half standalone. */
    bool_lit: (_$) => choice('#t', '#f'),

    int_lit: (_$) => token(/-?[0-9](_?[0-9])*/),

    /* AJ's slot is syntactically nonnegative; the u32 upper bound is a
     * reference-loader check. */
    u32_lit: (_$) => token(/[0-9](_?[0-9])*/),

    /* §1.5: the kind suffix is mandatory; a bare `0.5` is E-LEX-021 and is
     * therefore not a token of this grammar at all. `r` (Ratio) joins
     * `$`/`p`/`i`/`c` per the §1.5 addendum (D99, #492/ADR194) — this
     * grammar does not distinguish a literal's DOMAIN (E-LEX-024/027 are
     * lex-time domain checks the reference reader makes semantically, not
     * something this tokenizer can express), only its lexical SHAPE. */
    scaled_lit: (_$) => token(/-?[0-9](_?[0-9])*(\.[0-9](_?[0-9])*)?[$picr]/),

    /* AJ Mass is its own nonnegative exact literal class, not another
     * binary64 scalar lane. Scale and u64-nanounit bounds are checked by the
     * reference reader. */
    mass_lit: (_$) => token(/[0-9](_?[0-9])*(\.[0-9](_?[0-9])*)?m/),

    /* §1.5: the only four escapes; strings are single-line. */
    string: (_$) => token(/"([^"\\\n]|\\["\\nt])*"/),

    /* Any colon-prefixed symbol, for the fallback dialects only — the
     * content grammar spells each of its keywords literally (§1.6's set is
     * closed, and an unrecognized keyword is E-PARSE-013, never ignored). */
    comment: (_$) => token(seq(';', /[^\n]*/)),
  },
});
